--- a/4.4-Working_With_Items/cf.yaml
+++ b/4.4-Working_With_Items/cf.yaml
@@ -94,6 +94,7 @@ Resources:
             Action: sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AmazonDynamoDBFullAccess
+        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
 
   DDBAdminProfile:
     Type: AWS::IAM::InstanceProfile
