Updated GSIs for v3

--- a/webapp-v3/Pipfile
+++ b/webapp-v3/Pipfile
@@ -8,10 +8,10 @@ flake8 = "*"
 autopep8 = "*"
 pylint = "*"
 black = "*"
+prospector = "*"
 
 [packages]
 flask-paginate = "*"
-flask-mysqldb = "*"
 flask-login = "*"
 flask-wtf = "*"
 flask-bcrypt = "*"
