--- a/webapp-v3/requirements.txt
+++ b/webapp-v3/requirements.txt
@@ -1,34 +1,26 @@
 -i https://pypi.org/simple
 bcrypt==3.1.7
-boto3==1.9.205
-botocore==1.12.205
-cffi==1.12.3
+certifi==2019.9.11
+cffi==1.13.2
+chardet==3.0.4
 click==7.0
-docutils==0.14
-ecdsa==0.13.2
+cryptography==2.8
 flask-bcrypt==0.7.1
 flask-cache==0.13.1
 flask-caching==1.7.2
 flask-login==0.4.1
-flask-paginate==0.5.3
-flask-sqlalchemy==2.4.0
+flask-paginate==0.5.5
 flask-wtf==0.14.2
 flask==1.1.1
-future==0.17.1
+idna==2.8
 itsdangerous==1.1.0
-jinja2==2.10.1
-jmespath==0.9.4
+jinja2==2.10.3
 markupsafe==1.1.1
-pyasn1==0.4.6
 pycparser==2.19
-pyjwt==1.7.1
-python-dateutil==2.8.0 ; python_version >= '2.7'
-python-jose==3.0.1
-rsa==4.0
-s3transfer==0.2.1
-six==1.12.0
-sqlalchemy==1.3.6
-urllib3==1.25.3 ; python_version >= '3.4'
-watchtower==0.6.0
-werkzeug==0.15.5
+pyopenssl==19.0.0
+python-dotenv==0.10.3
+requests==2.22.0
+six==1.13.0
+urllib3==1.25.7
+werkzeug==0.16.0
 wtforms==2.2.1
