--- a/4.4-Working_With_Items/cf.yaml
+++ b/4.4-Working_With_Items/cf.yaml
@@ -73,7 +73,7 @@ Resources:
             REGION=$(curl --silent http://169.254.169.254/latest/dynamic/instance-identity/document | grep region | awk -F\" '{print $4}')
             aws configure set default.region $REGION
             sudo -u ec2-user aws configure set region $REGION
-            curl https://raw.githubusercontent.com/linuxacademy/content-dynamodb-deepdive/master/labs/bootstrap/tablebootstrap.py | python3 /dev/stdin -s 1 -o csv -f s3://dynamodblabs/artist.csv,s3://dynamodblabs/album.csv,s3://dynamodblabs/track.csv
+            curl https://raw.githubusercontent.com/linuxacademy/content-dynamodb-deepdive/master/labs/bootstrap/tablebootstrap.py | python3 /dev/stdin -s 1 -f s3://dynamodblabs/artist.csv,s3://dynamodblabs/album.csv,s3://dynamodblabs/track.csv
       NetworkInterfaces:
         - AssociatePublicIpAddress: true
           DeviceIndex: '0'
